Updated to Java 17 and Ehcache 3.